# Raytracer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  output.ppm
benches/: render.rs
src/: camera.rs  color.rs  image.rs  lib.rs  main.rs  object.rs  ray.rs  structs.rs  vec3.rs
src/file/: mod.rs  ppm.rs
src/materials/: commons.rs  dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: mod.rs  sphere.rs
src/structs/: aabb.rs  bvh.rs  color.rs  hit_data.rs  interval.rs  mod.rs  ray.rs  scene.rs  vec3.rs
