[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"
authors = ["AryaveerSR <me.aryaveer@gmail.com"]

[dependencies]
rand = "0.8.4"
rayon = "1.7.0"
once_cell = "1.18.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false